# wishlist

./: .editorconfig  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: tests.yml
tests/: test_wishlist.py
