[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "MIT"

readme = "README.rst"

repository = "https://github.com/dirn/wishlist"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
